# shred-tools

./: README.md  key.json
perf-report/: README.md  build_leader_xlsx.py  build_xlsx.py  extract.py  sig_valid_panel.py
proto/: Cargo.toml  build.rs  geyser.proto  solana-storage.proto
proto/src/: lib.rs
shreds-audit/: .gitignore  Cargo.toml  Makefile  README.md  build.rs  config.example.yaml
shreds-audit/src/: agg.rs  config.rs  deshred.rs  grpc.rs  leader.rs  live.rs  main.rs  names.rs  out.rs  pinger.rs  proto.rs  registry.rs  rx.rs  sigreg.rs  tui.rs  txncmp.rs  verify.rs  verify_realsig_test.rs
shreds-example/: Cargo.toml  README.md
shreds-example/src/: config.rs  decode.rs  main.rs  receiver.rs  tip.rs  trigger.rs
shreds-monitor/: .dockerignore  Cargo.toml  README.md  config.example.yaml
shreds-monitor/deployment/: Dockerfile  README.md  docker-compose.yaml  monitor.example.yaml
shreds-monitor/deployment/clickhouse/init/: 01-schema.sql
shreds-monitor/deployment/grafana/dashboards/: providers-monitoring.json  shreds-monitor.json
shreds-monitor/deployment/grafana/provisioning/dashboards/: dashboards.yaml
shreds-monitor/deployment/grafana/provisioning/datasources/: datasources.yaml
shreds-monitor/deployment/leader-schedule/: populate_leader_schedule.py
shreds-monitor/deployment/prometheus/: prometheus.yaml
shreds-monitor/src/: clickhouse.rs  config.rs  fec_stats.rs  leader_schedule.rs  main.rs  metrics.rs  receiver.rs
