[package]
name = "shred-audit"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "Receive Solana shreds from multiple providers, verify every shred's signature against the slot leader, timestamp arrival with nanosecond precision, and emit a signed Parquet report."

[dependencies]
# Shred wire-format parsing.
solana-ledger = { git = "https://github.com/nuel77/agave", branch = "xdp-read-dev", features = [
    "agave-unstable-api",
] }
solana-sdk = "3.0.0"

ed25519-dalek = { version = "2", features = ["batch"] }
rayon = "1"
crossbeam-channel = "0.5"
libc = "0.2"
ahash = "0.8"

serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
clap = { version = "4", features = ["derive", "env"] }
anyhow = "1"
ureq = { version = "2", features = ["json"] }
bs58 = "0.5"
ctrlc = "3"
chrono = "0.4"

# Live TUI dashboard (opt-in via --tui). ratatui re-exports crossterm, so the
# terminal backend rides along with it — no separate crossterm pin to drift.
ratatui = "0.29"

zip = { version = "2", default-features = false, features = ["deflate"] }
parquet = { version = "55", features = ["arrow", "zstd"] }
arrow-array = "55"
arrow-schema = "55"

[dev-dependencies]
# Real shred construction for the signature-path integration test. Same fork
# pin as the runtime dep so the wire format is identical.
solana-ledger = { git = "https://github.com/nuel77/agave", branch = "xdp-read-dev", features = [
    "agave-unstable-api",
    "dev-context-only-utils",
] }
solana-entry = { git = "https://github.com/nuel77/agave", branch = "xdp-read-dev", features = [
    "agave-unstable-api",
] }

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1
panic = "abort"
