[package]
name = "shreds-example"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"

[[bin]]
name = "shreds-example"
path = "src/main.rs"

[dependencies]
clap = { version = "4.5.18", features = ["derive", "env"] }
tokio = { version = "1.42.0", features = ["macros", "rt-multi-thread", "sync", "signal", "time"] }
anyhow = "1.0.99"
log = "0.4.27"
env_logger = "0.11.8"

# HTTP client for iris (sendTransaction) and the /shred-pay endpoint.
reqwest = { version = "0.13.4", features = ["json"] }
serde_json = "1.0.134"

# Transaction building / submission.
solana-sdk = "4.0.0"
solana-client = "4.1.0-beta.1"
solana-commitment-config = "3.0.0"
solana-compute-budget-interface = "3.0.0"
solana-system-interface = "3.1.0"
bincode = "1.3.3"
base64 = "0.22.1"

# Shred decoding. These MUST match the agave fork shreds-hub uses so the wire
# shred format decodes correctly.
solana-ledger = { git = "https://github.com/nuel77/agave", branch = "xdp-read-dev", features = ["agave-unstable-api"] }
solana-entry = { git = "https://github.com/nuel77/agave", branch = "xdp-read-dev", features = ["agave-unstable-api"] }
wincode = "0.2.5"
